--- a/HTS Controller/Properties/Resources.resx
+++ b/HTS Controller/Properties/Resources.resx
@@ -133,10 +133,13 @@
   <data name="subject" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\subject.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="checklist-32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\checklist-32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="eye-24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\eye-24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="checklist-32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\checklist-32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Light-24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\Light-24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
