--- a/HTS Controller/Properties/Resources.resx
+++ b/HTS Controller/Properties/Resources.resx
@@ -124,6 +124,9 @@
   <data name="subject-24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\subject-24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Light-24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\Light-24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Tools-24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\Tools-24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -139,7 +142,7 @@
   <data name="eye-24" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\eye-24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Light-24" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\Light-24.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="graph" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\graph.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
